--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.5.1",
         "bootstrap": "^5.3.2",
+        "braintree": "^3.21.0",
         "sass": "^1.69.7"
     }
 }
