--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:vWWcOMmcC7LHrPFkLDjzd8ZhfuxyIkOkJCju4A7HN0s=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_FRONTEND_URL=http://localhost:5174
@@ -16,6 +16,12 @@ DB_PORT=3306
 DB_DATABASE=db_bdoctors
 DB_USERNAME=root
 DB_PASSWORD=root
+
+BRAINTREE_ENVIRONMENT='sandbox'
+BRAINTREE_MERCHANT_ID= 'bmxnccj45xmrq6g2'
+BRAINTREE_PUBLIC_KEY= 'mvnp4d3p78jy95xz'
+BRAINTREE_PRIVATE_KEY= 'ea900506a64bfdb51f37142afbf37406'
+BRAINTREE_TOKENIZATION_KEY= 'sandbox_6mh6x3hv_bmxnccj45xmrq6g2'
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -38,11 +44,6 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
-
-BRAINTREE_ENVIRONMENT='sandbox'
-BRAINTREE_MERCHANT_ID=
-BRAINTREE_PUBLIC_KEY=
-BRAINTREE_PRIVATE_KEY=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
