fixed auto sponsor

--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,7 @@ BRAINTREE_TOKENIZATION_KEY= 'sandbox_6mh6x3hv_bmxnccj45xmrq6g2'
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=public
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
